Update latestVersion URL.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         },
         specStatus:  "unofficial",
         shortName:   "retail-benefits",
-        thisVersion: "https://convenience-org.github.io/retail-benefits-vocab/",
+        latestVersion: "https://w3id.org/retail-benefits/",
         doJsonLd:    true,
         noRecTrack: true,
         editors: [{
