--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
         },
         specStatus:  "unofficial",
         shortName:   "{{SHORTNAME}}",
-        thisVersion: "https://convenience-org.github.io/retail-benefits-vocab/",
+        latestVersion: "https://w3id.org/retail-benefits/",
         doJsonLd:    true,
         noRecTrack: true,
         editors: [{
